# meeting-insight-generator

./: .gitignore  FEATURE_ANALYSIS_AND_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_GUIDE.md  README.md  WHISPERX_SETUP.md  docker-compose.yml  requirements.txt
.venv310/: pyvenv.cfg
.venv310/Scripts/: activate  activate.bat
Documentation/: API_DOCUMENTATION.md  IMPLEMENTATION_GUIDE.md  PROGRESS_SUMMARY.md  PROMETHEUS_SETUP.md  TESTING_SUMMARY.md  openapi.json
backend/: Dockerfile  MONITORING.md  README.md  coverage.xml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  requirements.txt.backup  test_whisperx.py
backend/scripts/: create_tables.py  profile_performance.py  run_tests.py  setup_db.py  transcribe_sample.py
backend/src/: __init__.py  main.py
backend/src/agents/: __init__.py  action_item_agent.py  base_agent.py  config.py  decision_agent.py  llm_client.py  prompts.py  sentiment_agent.py  summary_agent.py  topic_agent.py
backend/src/api/: __init__.py
backend/src/api/models/: __init__.py  request.py  response.py
backend/src/api/routes/: __init__.py  chat.py  health.py  insights.py  project_meetings.py  projects.py  search.py  status.py  upload.py
backend/src/core/: database.py
backend/src/models/: db_models.py
backend/src/services/: __init__.py  agent_orchestrator.py  database_service.py  pipeline_store.py  transcript_store.py  transcription_service.py  vector_store_service.py
backend/src/utils/: audio_utils.py  cache.py  error_handlers.py  metrics.py  validation.py  video_utils.py
backend/storage/: .gitkeep
backend/tests/: README.md  __init__.py  conftest.py
backend/tests/e2e/: test_pipeline.py
backend/tests/integration/test_api/: test_health.py  test_insights.py  test_metrics.py  test_status.py  test_upload.py
backend/tests/performance/: test_performance.py
backend/tests/unit/: test_database_service.py  test_transcript_store.py
backend/tests/unit/test_agents/: test_action_item_agent.py  test_decision_agent.py  test_llm_client.py  test_sentiment_agent.py  test_summary_agent.py  test_topic_agent.py
backend/tests/unit/test_routes/: test_chat.py  test_insights.py  test_search.py  test_status.py
backend/tests/unit/test_utils/: test_audio_utils.py  test_cache.py  test_error_handlers.py  test_metrics.py  test_validation.py  test_video_utils.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  styles.css  theme.ts
frontend/src/api/: client.ts
frontend/src/components/: FloatingChat.tsx  Header.tsx  InsightCard.tsx  InsightsViewer.tsx  Sidebar.tsx  StatusPoller.tsx  Toast.tsx  UploadForm.tsx
frontend/src/hooks/: usePolling.ts  useToast.ts
frontend/src/pages/: InsightsPage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  SearchPage.tsx  UploadPage.tsx
frontend/src/types/: api.ts
